# empl-back

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
db/: schema.sql
db/init/: 01-create-schemas.sql  02-create-test-db.sql
db/migrations/: 20260527000001_init.sql  20260527121410_add_departments_table.sql  20260531085255_add_positions_table.sql  20260602082051_add_employees_table.sql
docker/: Dockerfile.app  Dockerfile.dbmate  Dockerfile.tests
src/: main.cpp
src/api/dto/: department_dto.h  employee_dto.h  position_dto.h
src/api/handlers/: department_ctrl.cpp  department_ctrl.h  employee_ctrl.cpp  employee_ctrl.h  position_ctrl.cpp  position_ctrl.h  router.cpp  router.h
src/api/helpers/: http_helpers.h  msg.h
src/core/contracts/: i_department_repo.h  i_department_svc.h  i_employee_repo.h  i_employee_svc.h  i_position_repo.h  i_position_svc.h
src/core/errors/: data_access_exception.h  duplicate_entry_exception.h  validation_exception.h
src/core/filters/: employee.h
src/core/models/: department.h  employee.h  position.h
src/core/models/read/: employee_detail.h
src/helpers/: envs.cpp  envs.h  pqxx.cpp  pqxx.h  strings.cpp  strings.h
src/infrastructure/: config.cpp  config.h  db_manager.cpp  db_manager.h  logger_factory.cpp  logger_factory.h
src/repository/: department_repo.cpp  department_repo.h  employee_repo.cpp  employee_repo.h  position_repo.cpp  position_repo.h
src/service/: department_service.cpp  department_service.h  employee_service.cpp  employee_service.h  position_service.cpp  position_service.h
tests/e2e/: employee_test.cpp
tests/helpers/: db_test.cpp  db_test.h  http.cpp  http.h
tests/integration/: department_repo_test.cpp  employee_repo_test.cpp  position_repo_test.cpp  repo_test.cpp  repo_test.h
tests/mocks/: mock_department_repo.h  mock_department_svc.h  mock_employee_repo.h  mock_employee_svc.h  mock_position_repo.h  mock_position_svc.h
tests/unit/: ctrl_test.cpp  ctrl_test.h  department_ctrl_test.cpp  department_svc_test.cpp  employee_ctrl_test.cpp  employee_svc_test.cpp  helpers_strings_test.cpp  position_ctrl_test.cpp  position_svc_test.cpp
